--- a/rocket.html
+++ b/rocket.html
@@ -22,7 +22,7 @@
 
 <a-cylinder position="-0.7 0.1 -4" rotation="0 0 0" radius="0.2" height="0.7" color="orange"></a-cylinder>
 
-<a-cone position="0 4 -4" width="0.0" height="" color="blue"></a-cone>
+<a-cone position="0 4 -4" width="1.0" height="3" color="blue" radius-bottom="0.6"></a-cone>
 
 
 <a-plane  position="0 2 -4" radius="0.5" height="3" color="blue">
@@ -50,3 +50,13 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
